[package]
name = "UraWebFramework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.13"
tower-service = "0.3.2"
hyper = { version = "1.2.0", features = ["server", "http1", "http2"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.3"
tokio-io = "0.2.0-alpha.6"