[package]
name = "UraWebFramework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = {version = "0.4.13" ,features = ["full"]}
tower-service = "0.3.2"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.3"
http-body-util = "0.1.1"
bytes = "1.5.0"
serde = "1.0.197"
serde_json = "1.0.114"
routerify = "3.0.0"